--- a/app/src/main/res/layout/activity_name_input.xml
+++ b/app/src/main/res/layout/activity_name_input.xml
@@ -19,4 +19,15 @@
         android:layout_marginTop="16dp"
         android:text="Submit" />
 
+
+    <TextView
+        android:id="@+id/textViewMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/buttonSubmit"
+        android:text="Oops, no book found with that name"
+        android:textSize="16sp"
+        android:textColor="@android:color/black"
+        android:visibility="gone" />
+
 </RelativeLayout>
